# langchain-sdlc-deep-agents

./: .claude.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agents.yaml  docker-compose.yml  pyproject.toml
.claude/: architecture.md  ci-cd.md  coding-standards.md  config.md  configuration.md
.github/workflows/: cd.yaml  ci.yaml
app/: __init__.py  cli.py  config.py  exceptions.py  llm_factory.py  main.py
app/agent/: __init__.py  conditions.py  graph.py  nodes.py  state.py
app/tools/: __init__.py  mcp_loader.py
app/tools/mcp_servers/: __init__.py  shell_server.py
prompts/coder/: system.jinja2
prompts/context_loader/: system.jinja2
prompts/planner/: system.jinja2
prompts/reviewer/: system.jinja2
prompts/summarizer/: system.jinja2
test-data/confluence/: confluence-docs.html
test-data/jira/: issues.json
tests/: conftest.py
tests/eval/: test_golden_tasks.py
tests/fixtures/: golden_tasks.json
tests/integration/: test_health.py
tests/unit/: test_conditions.py  test_config.py  test_graph.py  test_llm_factory.py  test_mcp_loader.py  test_nodes.py
