[project]
name = "langchain-sldc-deep-agents"
version = "0.1.0"
description = "A config-first, MCP-powered autonomous engineering assistant that orchestrates the SDLC using local LLMs or cloud APIs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Reece Fensome" }]

dependencies = [
    # Agent framework (sole framework per project constraints)
    "langgraph>=0.5.4,<0.6",
    "langgraph-checkpoint-postgres>=2.0.9,<3",
    "langgraph-checkpoint-sqlite>=2.0.1,<3",
    # LLM wrappers (only these three are permitted, see .claude/config.md)
    "langchain-core>=0.3.25,<0.4",
    "langchain-ollama>=0.2.1,<0.3",
    "langchain-anthropic>=0.3.0,<0.4",
    "langchain-openai>=0.2.10,<0.3",
    # MCP standardization
    "mcp>=1.1.2,<2",
    "langchain-mcp-adapters>=0.0.5,<0.1",
    # Web / API
    "fastapi>=0.115.5,<0.116",
    "uvicorn[standard]>=0.32.1,<0.33",
    # Config & data
    "pydantic>=2.10.2,<3",
    "pydantic-settings>=2.6.1,<3",
    "pyyaml>=6.0.2,<7",
    "jinja2>=3.1.4,<4",
    "python-dotenv>=1.0.1,<2",
    # State backends
    "psycopg[binary]>=3.2.3,<4",
    "redis>=5.2.0,<6",
    "qdrant-client>=1.12.1,<2",
    # HTTP & retries
    "httpx>=0.27.2,<0.28",
    "tenacity>=9.0.0,<10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.1,<0.9",
    "mypy>=1.13.0,<2",
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=6.0.0,<7",
    "pytest-httpx>=0.33.0,<0.34",
    "pre-commit>=4.0.1,<5",
    "types-pyyaml>=6.0.12.20240917,<7",
]

[project.scripts]
langchain-sldc-agent = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures"]

[[tool.mypy.overrides]]
module = ["qdrant_client.*", "mcp.*", "langchain_mcp_adapters.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require docker compose services",
    "eval: agent evaluation tests against golden tasks",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/tools/mcp_servers/*"]
